--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "1.6.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "11.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "schema-utils": "^4.3.0",
     "styled-components": "6.1.8",
