--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "14.5.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
-    "axios": "1.6.7",
+    "axios": "^1.6.7",
     "date-fns": "^4.1.0",
     "framer-motion": "11.0.3",
     "react": "18.2.0",
